kubectl/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dashy
  name: dashy
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: registry.hub.docker.com/vyrtualsynthese/dashy:multi-arch-f17c637
          ports:
            - name: web
              containerPort: 80
