kubectl/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: dashy
